Fixed navbar collapse button

--- a/client/src/assets/styles/base/_global.scss
+++ b/client/src/assets/styles/base/_global.scss
@@ -14,7 +14,7 @@ body {
 
 #root, #main {
   background-color: #F9F9FB;
-  button {
+  .btn {
     color: white;
     background-color: $buttonColor;
     border-color: $buttonColor;
