--- a/client/src/assets/styles/modules/_header.scss
+++ b/client/src/assets/styles/modules/_header.scss
@@ -12,6 +12,16 @@
       transition: $transition;
     }
   }
+  .navbar-toggle {
+    border: none;
+    &:hover, &:visited, &:active, &:focus {
+      border: none;
+      background-color: transparent;
+    }
+    .icon-bar {
+      background-color: white;
+    }
+  }
 }
 
 .rbLink {
